--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
       <header class="page-header">
         <a class="logo-header" href="index.html">
-          <img class="page-header-logo" src="images/logo.svg" width="138" height="64" alt="Логотип Города Седоны">
+          <img class="page-header-logo" src="images/logo.svg" width="145" height="75" alt="Логотип Города Седоны">
         </a>
         <nav class="navigation">
           <ul class="navigation-list">
@@ -133,11 +133,14 @@
           <div class="popover popover-appointment">
             <div class="popover-content">
               <div class="popover-head">
-              <h2 class="popover-title">Поиск гостиницы в Седоне</h2>
-              <button class="popover-close" type="button">
-                <svg aria-hidden="true" focusable="false" width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M14.5 1.78 13.2.5 7.49 6.2 1.79.5.48 1.8l5.7 5.7-5.7 5.7 1.3 1.3 5.7-5.7 5.7 5.7 1.3-1.3-5.7-5.7 5.7-5.7Z" fill="#000"/>
-                </svg>
-                <span class="visually-hidden">Закрыть</span>
+                <h2 class="popover-title">Поиск гостиницы в Седоне</h2>
+                <button class="popover-close" type="button">
+                  <svg class="close-button" aria-hidden="true" focusable="false" width="15" height="15"
+                    viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                      d="M14.5 1.78 13.2.5 7.49 6.2 1.79.5.48 1.8l5.7 5.7-5.7 5.7 1.3 1.3 5.7-5.7 5.7 5.7 1.3-1.3-5.7-5.7 5.7-5.7Z" />
+                  </svg>
+                  <span class="visually-hidden">Закрыть</span>
                 </button>
               </div>
               <form class="popover-form" action="https://echo.htmlacademy.ru/" method="post">
@@ -146,32 +149,33 @@
                   <label class="form-label" for="popover-date-1">Дата заезда:</label>
                   <input class="field-popover" type="text" id="popover-date-1" name="popover-date-1"
                     placeholder="27 апреля 2020">
-                    <span class="date-1">Мы не можем отправить вас в прошлое.</span>
+                  <span class="date-1">Мы не можем отправить вас в прошлое.</span>
                 </div>
 
                 <div class="field-group popover-form-date">
                   <label class="form-label" for="popover-date-2">Дата выезда:</label>
                   <input class="field-popover" type="text" id="popover-date-2" name="popover-date-2"
                     placeholder="1 сентября 2023">
-                    <span class="date-2">На эти даты есть свободные номера. Пока есть.</span>
+                  <span class="date-2">На эти даты есть свободные номера. Пока есть.</span>
                 </div>
 
                 <div class="popover-form-piople-help">
-                <div class="field-group popover-form-piople">
-                <span class="help-popover">Взрослые:</span>
-                <div class="popover-rithg">
-                  <div class="popover-slider">
-                    <button type="button" class="minus slider-btn">-</button>
-                    <input class="number" type="text" value="2">
-                    <button type="button" class="plus slider-btn">+</button>
+                  <div class="field-group popover-form-piople">
+                    <span class="help-popover">Взрослые:</span>
+                    <div class="popover-rithg">
+                      <div class="popover-slider">
+                        <button type="button" class="minus slider-btn">-</button>
+                        <input class="number" type="text" value="2">
+                        <button type="button" class="plus slider-btn">+</button>
+                      </div>
+                    </div>
                   </div>
-                </div>
-                </div>
 
                   <div class="popover-slaider-child">
                     <div>
-                    <span class="help-popover help-popover-children">Дети:</span>
-                    <img class="popover-icon" src="images/popover_icon.png" width="26" height="26" alt="Правила для детей">
+                      <span class="help-popover help-popover-children">Дети:</span>
+                      <img class="popover-icon" src="images/popover_icon.png" width="26" height="26"
+                        alt="Правила для детей">
                     </div>
                     <div class="popover-rithg">
                       <div class="popover-slider">
@@ -182,7 +186,8 @@
                     </div>
                     <div class="popover-slaider-child-icon">
                       <p class="popover-slaider-child-text">
-                        Укажите количество детей, которые будут с вами, возраст которых от 6 до 18 лет. Дети <br>до 6 лет размещаются<br> бесплатно.
+                        Укажите количество детей, которые будут с вами, возраст которых от 6 до 18 лет. Дети <br>до 6
+                        лет размещаются<br> бесплатно.
                       </p>
                     </div>
                   </div>
@@ -212,20 +217,31 @@
           <ul class="footer-social-list">
             <li class="footer-social-item">
               <a class="button-vk" href="https://vk.com/htmlacademy">
-                <svg  class="footer-icon" aria-hidden="true" focusable="false" width="25" height="15" viewBox="0 0 25 15"  xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M24.12 1.8c.16-.54 0-.94-.8-.94H20.7c-.67 0-.98.34-1.15.73 0 0-1.33 3.2-3.22 5.27-.61.6-.9.8-1.23.8-.16 0-.41-.2-.41-.75v-5.1c0-.66-.19-.95-.74-.95H9.82c-.42 0-.67.3-.67.59 0 .62.95.76 1.04 2.51v3.8c0 .83-.15.98-.48.98-.9 0-3.06-3.2-4.34-6.88-.25-.72-.5-1-1.18-1H1.57c-.75 0-.9.34-.9.73 0 .68.89 4.07 4.14 8.55 2.17 3.06 5.23 4.72 8 4.72 1.68 0 1.88-.37 1.88-1v-2.32c0-.74.16-.88.7-.88.38 0 1.05.19 2.6 1.66 1.79 1.75 2.08 2.54 3.08 2.54h2.63c.75 0 1.12-.37.9-1.1-.23-.72-1.08-1.77-2.2-3.02-.62-.71-1.54-1.48-1.82-1.86-.39-.5-.28-.71 0-1.15 0 0 3.2-4.42 3.54-5.93Z" />
+                <svg class="footer-icon" aria-hidden="true" focusable="false" width="25" height="15" viewBox="0 0 25 15"
+                  xmlns="http://www.w3.org/2000/svg">
+                  <path fill-rule="evenodd" clip-rule="evenodd"
+                    d="M24.12 1.8c.16-.54 0-.94-.8-.94H20.7c-.67 0-.98.34-1.15.73 0 0-1.33 3.2-3.22 5.27-.61.6-.9.8-1.23.8-.16 0-.41-.2-.41-.75v-5.1c0-.66-.19-.95-.74-.95H9.82c-.42 0-.67.3-.67.59 0 .62.95.76 1.04 2.51v3.8c0 .83-.15.98-.48.98-.9 0-3.06-3.2-4.34-6.88-.25-.72-.5-1-1.18-1H1.57c-.75 0-.9.34-.9.73 0 .68.89 4.07 4.14 8.55 2.17 3.06 5.23 4.72 8 4.72 1.68 0 1.88-.37 1.88-1v-2.32c0-.74.16-.88.7-.88.38 0 1.05.19 2.6 1.66 1.79 1.75 2.08 2.54 3.08 2.54h2.63c.75 0 1.12-.37.9-1.1-.23-.72-1.08-1.77-2.2-3.02-.62-.71-1.54-1.48-1.82-1.86-.39-.5-.28-.71 0-1.15 0 0 3.2-4.42 3.54-5.93Z" />
                 </svg>
                 <span class="visually-hidden">ВКонтакте</span>
               </a>
             </li>
             <li class="footer-social-item">
               <a class="button-tg" href=" https://t.me/htmlacademy">
-                <svg class="footer-icon" aria-hidden="true" focusable="false" width="18" height="17" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M16.79.96.84 7.1c-1.09.44-1.08 1.05-.2 1.32l4.1 1.28 9.47-5.98c.44-.27.85-.13.52.17l-7.68 6.93-.28 4.22c.41 0 .6-.2.83-.41l1.99-1.94 4.13 3.06c.77.42 1.31.2 1.5-.71l2.72-12.8c.28-1.1-.43-1.61-1.16-1.28Z" fill="#83B3D3"/></svg>
+                <svg class="footer-icon" aria-hidden="true" focusable="false" width="18" height="17" viewBox="0 0 18 17"
+                  fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path
+                    d="M16.79.96.84 7.1c-1.09.44-1.08 1.05-.2 1.32l4.1 1.28 9.47-5.98c.44-.27.85-.13.52.17l-7.68 6.93-.28 4.22c.41 0 .6-.2.83-.41l1.99-1.94 4.13 3.06c.77.42 1.31.2 1.5-.71l2.72-12.8c.28-1.1-.43-1.61-1.16-1.28Z" />
+                </svg>
                 <span class="visually-hidden">Телеграм</span>
               </a>
             </li>
             <li class="footer-social-item">
               <a class="button-youtube" href=" https://www.youtube.com/user/htmlacademyru">
-                <svg class="footer-icon" aria-hidden="true" focusable="false" width="23" height="18" viewBox="0 0 23 18" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M18.94.36H3.51C1.65.36.33 1.95.33 3.76v10.09c0 1.91 1.32 3.5 3.18 3.5h15.65c1.64 0 3.17-1.59 3.17-3.4V3.76c-.22-1.8-1.53-3.4-3.39-3.4ZM7.99 12.89V4.82l7.34 4.04-7.34 4.03Z" fill="#83B3D3"/></svg>
+                <svg class="footer-icon" aria-hidden="true" focusable="false" width="23" height="18" viewBox="0 0 23 18"
+                  fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path
+                    d="M18.94.36H3.51C1.65.36.33 1.95.33 3.76v10.09c0 1.91 1.32 3.5 3.18 3.5h15.65c1.64 0 3.17-1.59 3.17-3.4V3.76c-.22-1.8-1.53-3.4-3.39-3.4ZM7.99 12.89V4.82l7.34 4.04-7.34 4.03Z" />
+                </svg>
                 <span class="visually-hidden">Ютуб</span>
               </a>
             </li>
@@ -235,8 +251,11 @@
           <a class="footer-contacts-address-phone" href="tel:+78121212">+7 (812) 812-12-12</a>
         </section>
         <a class="htmlacademy-link" href="https://htmlacademy.ru/">
-          <img class="page-footer-logo" src="images/html_academy.svg" width="115" height="33"
-            alt="Логотип HTML-academy">
+          <svg class="htmlacademy-logo" width="115" height="34" viewBox="0 0 115 34" xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="M0 13.26v2.6h2.5v-2.6H0ZM11.6 4.86c-1.6 0-2.8.7-3.6 1.7h-.1V.36h-2v15.5h2v-5.3c0-2.1 1.3-3.6 3.3-3.6 1.8 0 2.9 1.4 2.9 3.2v5.7h2v-6.1c.1-3-1.8-4.9-4.5-4.9ZM26.6 5.16h-4.8v-3.7h-2v3.8h-1.9v2h1.9v6c0 1.7 1 2.7 2.7 2.7h4.1v-2h-3.7c-.7 0-1.1-.4-1.1-1.1v-5.7h4.8v-2ZM41.1 4.96c-1.6 0-2.9.8-3.5 2.1h-.1c-.6-1.2-1.8-2.1-3.4-2.1-1.4 0-2.5.8-3.1 1.8h-.1v-1.6H29v10.6h2v-5.4c0-2 1-3.5 2.6-3.5 1.5 0 2.4 1 2.4 2.6v6.3h2v-5.6c0-2.4 1.4-3.3 2.6-3.3 1.5 0 2.4 1 2.4 2.6v6.3h2v-6.5c.1-2.5-1.4-4.3-3.9-4.3ZM47.8 13.06c0 1.7 1 2.7 2.8 2.7h2v-2h-1.7c-.7 0-1.1-.4-1.1-1.1V.36h-2v12.7ZM28.9 20.06c-.9-1.1-2.2-1.8-3.9-1.8-3.1 0-5.4 2.3-5.4 5.6s2.3 5.6 5.4 5.6c1.8 0 3-.8 3.8-1.9h.1v1.6h2v-10.6h-2v1.5Zm-3.6 7.4c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c0 1.9-1.4 3.6-3.6 3.6ZM44.2 22.36c-.5-2.4-2.6-4.1-5.4-4.1a5.4 5.4 0 0 0-5.6 5.6c0 3.1 2.2 5.6 5.6 5.6 2.8 0 4.9-1.8 5.4-4.2h-2.1a3.4 3.4 0 0 1-3.3 2.3c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6c1.6 0 2.8 1 3.3 2.2h2.1v-.2ZM55.1 20.06c-.9-1.1-2.2-1.8-3.9-1.8-3.1 0-5.4 2.3-5.4 5.6s2.3 5.6 5.4 5.6c1.8 0 3-.8 3.8-1.9h.1v1.6h2v-10.6h-2v1.5Zm-3.6 7.4c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c0 1.9-1.5 3.6-3.6 3.6ZM68.7 20.16c-.9-1.1-2.2-1.9-3.9-1.9-3.1 0-5.4 2.3-5.4 5.6s2.2 5.6 5.4 5.6c1.7 0 3-.8 3.8-1.8h.1v1.5h2v-15.4h-2v6.4Zm-3.6 7.3c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c-.1 2-1.5 3.6-3.6 3.6ZM78.3 18.26c-3.3 0-5.5 2.5-5.5 5.6 0 3 2.1 5.6 5.5 5.6 2.5 0 4.5-1.3 5.2-3.6h-2.1c-.5 1-1.6 1.6-3 1.6-1.9 0-3.3-1.3-3.4-2.9h8.8c.2-3.6-2-6.3-5.5-6.3Zm0 1.9c1.7 0 3 1 3.3 2.6h-6.5c.3-1.5 1.5-2.6 3.2-2.6ZM98.2 18.26c-1.6 0-2.9.8-3.6 2h-.1c-.6-1.2-1.8-2-3.4-2-1.4 0-2.5.7-3.1 1.8v-1.5h-1.9v10.6h2v-5.4c0-2 1-3.4 2.6-3.5 1.5 0 2.4 1 2.4 2.6v6.3h2v-5.6c0-2.4 1.4-3.3 2.6-3.3 1.5 0 2.4 1 2.4 2.6v6.3h2v-6.5c.1-2.6-1.4-4.4-3.9-4.4ZM109.4 27.36l-3.6-8.9h-2.2l4.8 11.6c-.3.9-.7 1.2-1.7 1.2h-2.5v2h2.5c1.8 0 2.8-.8 3.5-2.6l4.7-12.2h-2.1l-3.4 8.9Z"
+              alt="Логотип HTML-academy" />
+          </svg>
         </a>
       </footer>
     </div>
